--- a/All/Home/style.css
+++ b/All/Home/style.css
@@ -1,1 +1,60 @@
- 
+body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: white;
+    background-image: url(../../Assets/imgs/Bg-Img.webp);
+    margin: 0;
+    padding: 0;
+    background-size:cover ;
+    background-position: center;
+    background-blend-mode: darken;
+    background-color: rgb(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    text-align: center;
+    flex-direction: column;
+}
+
+#profile-container {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+#img-perfil {
+    margin-bottom: 10%;
+    border-radius: 50%;
+    width: 130px; 
+    height: 130px;
+    object-fit: cover;
+
+}
+
+#p1 {
+    margin-bottom: 3%;
+    font-size: 35px; 
+}
+
+#p2 {
+    margin-bottom: 3%;
+    font-size: 18px;
+}
+
+#contact-container {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+#line {
+    width: 40px;
+    height: 2px;
+    background-color: black;
+}
+
+#contact-container img {
+    width: 22px;
+    height: 22px;
+    filter: invert(0.5);
+}
