--- a/All/Navbar/style.css
+++ b/All/Navbar/style.css
@@ -2,6 +2,7 @@ body {
     background-color: white;
     margin: 0;
     font-family: Arial, sans-serif;
+
 }
 
 .Navbar {
@@ -19,7 +20,7 @@ body {
 }
 
 .logo {
-    color: black;
+    color: white;
     font-size: 12px;
     font-weight: bold;
     letter-spacing: 1px;
